--- a/client/src/Components/HomeComponent.css
+++ b/client/src/Components/HomeComponent.css
@@ -257,3 +257,7 @@ img.rounded-circle {
   flex-direction: column;
   justify-content: center;
 }
+
+#logo-img {
+  margin-top: 0.5rem;
+}
